--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
     text-align: center;
   }
   .yo{
-    margin-left: 100px;
+    margin-left: 30px;
     float: left;
     font-size: 50px;
     font-weight: bold;
@@ -25,12 +25,7 @@ body {
     position: sticky;
     top: 0px;
     z-index: 1;
-  }
-  .new{
-    background-color:red;
-    position: sticky;
-    top: 58px;
-    padding: 5px;
+    border-bottom: 5px solid red;
   }
   nav ul {
     list-style-type: none;
@@ -51,6 +46,9 @@ body {
   a:hover{
     color: red;
   }
+
+  
+
   .anima{
    position: relative;
    bottom: 10px;
@@ -83,6 +81,9 @@ body {
     font-size: 20px;
     padding-top: 13px;
   }
+  .heading{
+    float: left;
+  }
   .btn{
     width: 140px;
     height: 40px;
@@ -108,26 +109,30 @@ body {
     
   }
   .about{
-    position: relative;
     width: 1200px;
     height: 500px;
     background-color: rgb(223, 223, 19);
-    bottom: 165px;
-    padding-top: 100px;
+    padding-top: 80px;
     color: black;
-    text-align: center;
-    margin-left: 130px;
-    padding: auto;
+    margin: auto;
+    margin-top: 150px;
     box-shadow: -40px 30px 20px rgb(193, 173, 173);
   }
-  .about h2{
+  .about h1{
     color: black;
+    position: relative;
+    left: 60px;
+    top: 40px;
+    font-family: 'Sedgwick Ave', cursive;
+    text-decoration: underline;
   }
-  .text1{
+  .about p{
+    padding: 20px;
     line-height: 25px;
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-style: italic;
   }
+
   .box{
     height: 240px;
     width: 170px;
@@ -146,12 +151,15 @@ body {
     right: 27px
   }
   #menu{
+    margin-top: 150px;
     color: black;
     text-align: center;
     font-size: large;
   }
+
+  
   #contact{
-    padding-top: 10px;
+    margin-top: 100px;
     text-align: center;
   }
  h2 {
@@ -162,11 +170,17 @@ body {
     font-family: 'Sedgwick Ave', cursive;
     font-size: 50px;
   }
+
   
   footer {
     background-color: rgb(210, 210, 199);;
     color: black;
     text-align: center;
-    padding: 2px;
+    padding: 10px;
   }
+  footer p{
+    position: relative;
+    bottom: 7px;
+  }
+
   
