--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    display: flex;
+    display: flex ;
     font-size: 22px;
     justify-content: right;
     margin-right: 50px;
@@ -47,12 +47,26 @@ body {
     color: red;
   }
 
-  
+  @media screen and (max-width:768px){
+    .yo{
+      position: relative;
+      bottom: 32px;
+      right: 27px;
+    }
+    nav{
+      padding: 29px;
+    }
+    nav ul{
+      display: none;
+    }
+  }
 
   .anima{
+    width: 1100px;
+    height: 770px;
    position: relative;
-   bottom: 10px;
-   left: 420px;
+   bottom: 30px;
+   left: 460px;
 
   }
   .logo{
@@ -69,12 +83,12 @@ body {
     font-weight: bold;
     font-style: oblique;
     font-size: 50px;
-    bottom: 650px;
-    right: 45px;
+    bottom: 700px;
+    left: 200px;
   }
   .jj{
     position: relative;
-    left: 140px;
+    right: 100px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     width: 550px;
     font-weight:1;
@@ -88,7 +102,7 @@ body {
     width: 140px;
     height: 40px;
     font-weight: bold;
-    margin-left: 330px;
+    margin-left: 90px;
     background-color: rgb(223, 223, 19);
     border-radius: 20px;
   }
@@ -100,6 +114,65 @@ body {
     background-color:#271915
   
   }
+
+  @media only screen and (max-width:530px){
+    .anima{
+    width: 390px;
+    height: 620px;
+     position: relative;
+     left: 9px;
+     top: 90px;
+     overflow-x: hidden;
+     }
+     .logo{
+      position:relative;
+      height: 130px;
+      width: 130px;
+      bottom: 570px;
+      left: 130px;
+    }
+    .FFC{
+      padding-top: 10px;
+      font-family: 'Sedgwick Ave', cursive;
+      position: relative;
+      color:white;
+      font-weight: bold;
+      font-style: oblique;
+      font-size: 25px;
+      bottom: 610px;
+      left: 110px;
+    }
+    .jj{
+      position: relative;
+      right: 60px;
+      font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      width: 300px;
+      font-weight:1;
+      font-size: 13px;
+      padding-top: 7px;
+      padding-bottom: 7px;
+      text-align: center;
+    }
+   
+    .btn{
+      margin-top: 10px;
+      width: 100px;
+      height: 30px;
+      font-weight: normal;
+      margin-left: 33px;
+      background-color: rgb(223, 223, 19);
+      border-radius: 20px;
+    }
+    .btn:hover{
+      background-color: white;
+    }
+    .yolo{
+      margin-top: 0px;
+      background-color:#271915
+    
+    }
+  }
+
   main {
     font-family:Georgia, 'Times New Roman', Times, serif;
     padding: 20px;
@@ -110,9 +183,9 @@ body {
   }
   .about{
     width: 1200px;
-    height: 500px;
+    height: 550px;
     background-color: rgb(223, 223, 19);
-    padding-top: 80px;
+    padding-top: 40px;
     color: black;
     margin: auto;
     margin-top: 150px;
@@ -121,18 +194,53 @@ body {
   .about h1{
     color: black;
     position: relative;
+    margin-top: 110px;
     left: 60px;
-    top: 40px;
+    padding-bottom: 20px;
     font-family: 'Sedgwick Ave', cursive;
     text-decoration: underline;
   }
   .about p{
-    padding: 20px;
+    position: relative;
+    bottom: 70px;
+    padding: 40px;
     line-height: 25px;
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-style: italic;
   }
 
+  @media only screen and (max-width:530px){
+    .about{
+      width: 320px;
+      height: 700px;
+      background-color: rgb(223, 223, 19);
+      padding-top: 8px;
+      color: black;
+      margin: auto;
+      position: relative;
+      right:5px;
+      box-shadow: -40px 30px 20px rgb(193, 173, 173);
+    }
+    .about h1{
+      text-align: center;
+      color: black;
+      position:relative;
+      bottom: 200px;
+      left: 0px;
+      right: 70px;
+      
+     
+    }
+    .about p{
+      font-size: medium;
+      position: relative;
+      bottom: 290px;
+      line-height: 20px;
+      padding: 20px;
+      font-family:Georgia, 'Times New Roman', Times, serif;
+      font-style: italic;
+    }
+  }
   .box{
     height: 240px;
     width: 170px;
@@ -157,6 +265,39 @@ body {
     font-size: large;
   }
 
+  @media only screen and (max-width:530px){
+    #menu{
+      margin-top: 100px;
+      color: black;
+      text-align: center;
+      font-size: large;
+    }
+    .box{
+      height: 150px;
+      width: 50px;
+      background-color: rgb(223, 223, 19);
+      display: inline-block;
+      font-size: 12px;
+      padding:50px;
+      margin: auto;
+      margin-bottom: 20px;
+      white-space: nowrap;
+      box-shadow: 0px 0px 0px  rgb(0,0,0,0);
+    }
+    .box b{
+      position: relative;
+      right: 5px;
+    }
+
+    .imgs{
+      position: relative;
+      height: 140px;
+      width: 130px;
+      right: 40px;
+      bottom: 30px;
+      
+    }
+  }
   
   #contact{
     margin-top: 100px;
@@ -171,7 +312,17 @@ body {
     font-size: 50px;
   }
 
-  
+  @media only screen and (max-width:530px){
+    h2 {
+      text-align: center;
+      text-decoration: underline;
+      margin-bottom: 40px;
+      color: white;
+      font-family: 'Sedgwick Ave', cursive;
+      font-size: 40px;
+    }
+  }
+
   footer {
     background-color: rgb(210, 210, 199);;
     color: black;
